fix mobile gallery overflow bug

--- a/style.css
+++ b/style.css
@@ -560,6 +560,8 @@ main.active {
 }
 
 .gallery.touch {
+  width: 100vw;
+  max-width: 100vw;
   overflow-x: auto;
 }
 
